[project]
name = "amazonpricecompetitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tinydb>=4.8.2",
]
